--- a/Untitled0.ipynb
+++ b/Untitled0.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO9UQDq2xvV7eAkzLLqdTx4",
+      "authorship_tag": "ABX9TyOjsaTMWp1h474OE2tz6yso",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,13 +28,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 15,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "g-aI7ewArGh5",
-        "outputId": "44eef6d2-9306-4cd6-a4cf-8fe70fc74005"
+        "outputId": "a045003f-b504-4cb2-82c9-c6d6dad85b57"
       },
       "outputs": [
         {
@@ -61,9 +61,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "suU2ZcgkrQVX",
-        "outputId": "08653bee-4603-49a5-8c24-3affd6403329"
+        "outputId": "11f75373-76f3-42bc-f805-df28968cfd02"
       },
-      "execution_count": 4,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "stream",
@@ -76,11 +76,141 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "print('長井来希')\n",
+        "print('23歳')\n",
+        "print('三度の飯よりスノボが好き')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "_v2Gp_KNsDp1",
+        "outputId": "46f97ebe-3ea0-4bb0-8290-934ab5b54fd2"
+      },
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "長井来希\n",
+            "23歳\n",
+            "三度の飯よりスノボが好き\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "''''''\n",
+        "# 自己紹介プログラム\n",
+        "# 作成者: 長井来希\n",
+        "# 作成日: 2025年8月28日\n",
+        "''''''"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "id": "IpE5ULcHyf_8",
+        "outputId": "8011c98a-736d-43b6-f5c3-f308b6e3ea01"
+      },
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "''"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 18
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 自己紹介プログラム\n",
+        "# 作成者: 長井来希\n",
+        "# 作成日: 2025年8月28日"
+      ],
+      "metadata": {
+        "id": "zUvKc_Szz5X8"
+      },
+      "execution_count": 19,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\"\"\"\n",
+        "自己紹介プログラム\n",
+        "作成者：長井来希\n",
+        "作成日 2025年8月28日\n",
+        "\"\"\""
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "id": "vZPVUaPy1Xhr",
+        "outputId": "e825b940-97ab-45be-c856-df23fd3f0240"
+      },
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'\\n自己紹介プログラム\\n作成者：長井来希\\n作成日 2025年8月28日\\n'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 20
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#hahah"
+      ],
+      "metadata": {
+        "id": "gwj7jmsn1qOJ"
+      },
+      "execution_count": 21,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# hahah"
+      ],
+      "metadata": {
+        "id": "FvD7SWRd1ujJ"
+      },
+      "execution_count": 22,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "_v2Gp_KNsDp1"
+        "id": "-QfE1V301wtZ"
       },
-      "execution_count": null,
+      "execution_count": 22,
       "outputs": []
     }
   ]
