Colab を使用して作成されました

--- a/2-5_コンテナの応用.ipynb
+++ b/2-5_コンテナの応用.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNCEjsKaQmZIxRUccV8ixbV",
+      "authorship_tag": "ABX9TyMMlQu82RwMKTjoYrzzojSf",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -42,7 +42,7 @@
         "id": "kk70WNwjMfpm",
         "outputId": "b858780d-f689-4065-9efe-35ad4f070fef"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -57,9 +57,32 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "print(\"nagai\")"
+      ],
+      "metadata": {
+        "id": "qr5oPYai_hyT",
+        "outputId": "d8457be9-4edd-4a8f-8c79-430aa8367eef",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "nagai\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "cjwykDvz9B--"
+        "id": "I1Sd0VRf_kY7"
       },
       "execution_count": null,
       "outputs": []
