Colab を使用して作成されました

--- a/2-5_コンテナの応用.ipynb
+++ b/2-5_コンテナの応用.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMMlQu82RwMKTjoYrzzojSf",
+      "authorship_tag": "ABX9TyPYUq1WrMTRP11GX+RUaMrA",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -58,22 +58,184 @@
     {
       "cell_type": "code",
       "source": [
-        "print(\"nagai\")"
+        "# ディクショナリの中にディクショナリをネスト\n",
+        "matsuda_scores = {\"network\":60,\"database\":70,\"security\":90}\n",
+        "asagi_scores ={\"network\":50,\"database\":80,\"security\":90}\n",
+        "members_scores = {\"松田\":matsuda_scores,\"浅木\":asagi_scores}\n",
+        "print(members_scores)"
       ],
       "metadata": {
-        "id": "qr5oPYai_hyT",
-        "outputId": "d8457be9-4edd-4a8f-8c79-430aa8367eef",
+        "id": "cjwykDvz9B--",
+        "outputId": "e2950635-ec8f-42e1-a5b7-2b924c82eee5",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 5,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "nagai\n"
+            "{'松田': {'network': 60, 'database': 70, 'security': 90}, '浅木': {'network': 50, 'database': 80, 'security': 90}}\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from os import PRIO_PGRP\n",
+        "# ディクショナリの中にセットをネスト\n",
+        "members_hobbies = {\n",
+        "    \"松田\":{\"SNS\",\"麻雀\",\"自転車\"},\n",
+        "    \"浅木\":{\"麻雀\",\"食べ歩き\",\"数学\",\"数学\",\"数学\"}}\n",
+        "print(members_hobbies) # 全員の趣味を表示する\n",
+        "print(members_hobbies[\"松田\"]) # 松田の趣味を表示する\n",
+        "print(members_hobbies[\"浅木\"]) # 浅木の趣味を表示する"
+      ],
+      "metadata": {
+        "id": "RZtTcBtwB5gd",
+        "outputId": "5131fcfa-c016-4ca7-9461-dba57ab15b32",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "{'松田': {'自転車', 'SNS', '麻雀'}, '浅木': {'食べ歩き', '麻雀', '数学'}}\n",
+            "{'自転車', 'SNS', '麻雀'}\n",
+            "{'食べ歩き', '麻雀', '数学'}\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from os import PRIO_PGRP\n",
+        "# ディクショナリの中にセットをネスト\n",
+        "members_hobbies = {\n",
+        "    \"松田\":{\"SNS\",\"麻雀\",\"自転車\"},\n",
+        "    \"浅木\":{\"麻雀\",\"食べ歩き\",\"数学\",\"数学\",\"数学\"}}\n",
+        "print(\"全員の趣味：\",members_hobbies) # 全員の趣味を表示する\n",
+        "print(\"松田の趣味：\",members_hobbies[\"松田\"]) # 松田の趣味を表示する\n",
+        "print(\"浅木の趣味：\",members_hobbies[\"浅木\"]) # 浅木の趣味を表示する"
+      ],
+      "metadata": {
+        "id": "VWdsfdcdEU9l",
+        "outputId": "63dadab9-7314-4643-d318-2cb952a99cce",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "全員の趣味： {'松田': {'自転車', 'SNS', '麻雀'}, '浅木': {'食べ歩き', '麻雀', '数学'}}\n",
+            "松田の趣味： {'自転車', 'SNS', '麻雀'}\n",
+            "浅木の趣味： {'食べ歩き', '麻雀', '数学'}\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 二次元リスト\n",
+        "a=[1,2,3]\n",
+        "b=[4,5,6]\n",
+        "c=[a,b] # aを0番目、bを1番目とする2次元リストcを定義\n",
+        "print(c)\n",
+        "print(c[0])\n",
+        "print(c[1])\n",
+        "print(c[1][2])"
+      ],
+      "metadata": {
+        "id": "Oag7QrvsEnKy",
+        "outputId": "07af54df-5791-4c30-d595-f2a2e710b03a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[1, 2, 3], [4, 5, 6]]\n",
+            "[1, 2, 3]\n",
+            "[4, 5, 6]\n",
+            "6\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# セットの共通点を探す\n",
+        "members_hobbies={\n",
+        "    \"松田\":{\"SNS\",\"麻雀\",\"自転車\"},\n",
+        "    \"浅木\":{\"麻雀\",\"食べ歩き\",\"数学\"}\n",
+        "    }\n",
+        "common_hobbies= members_hobbies[\"松田\"]&members_hobbies[\"浅木\"]\n",
+        "print(\"共通の趣味は\",common_hobbies)"
+      ],
+      "metadata": {
+        "id": "Pouu9g6qFv7Q",
+        "outputId": "3407e7eb-eb3f-4097-f3cc-f6cb800e726a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "共通の趣味は {'麻雀'}\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 4つの集合演算\n",
+        "A={1,2,3,4}\n",
+        "B={2,3,4,5}\n",
+        "print(A | B) #和集合\n",
+        "print(A & B) #積集合\n",
+        "print(A - B) #差集合\n",
+        "print(A ^ B) #対称差"
+      ],
+      "metadata": {
+        "id": "pAvvQQzfHPWV",
+        "outputId": "d5e9aec4-0e28-4375-c7cd-b3dd83f5a4e8",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "{1, 2, 3, 4, 5}\n",
+            "{2, 3, 4}\n",
+            "{1}\n",
+            "{1, 5}\n"
           ]
         }
       ]
@@ -82,7 +244,7 @@
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "I1Sd0VRf_kY7"
+        "id": "PjyxmEwfH8k9"
       },
       "execution_count": null,
       "outputs": []
