Colab を使用して作成されました

--- a/3-3_条件式.ipynb
+++ b/3-3_条件式.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN8z5zKWjjCxtBfE1lidBYG",
+      "authorship_tag": "ABX9TyMaAsutzGM1+GwsRHG0Ed6U",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -188,9 +188,35 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "# 条件式の評価結果を確認する\n",
+        "score = int(input(\"試験の点数を入力>\"))\n",
+        "print(score>=60)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "W1k3obNy99hQ",
+        "outputId": "43e10346-fd9f-4d40-af1c-3259a0bab6f0"
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "試験の点数を入力>80\n",
+            "True\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "W1k3obNy99hQ"
+        "id": "Dkyqha3flyo8"
       },
       "execution_count": null,
       "outputs": []
