Colab を使用して作成されました

--- a/3-4_分岐構文のバリエーション.ipynb
+++ b/3-4_分岐構文のバリエーション.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNcaeF3NCxxySNk3ftLcHPX",
+      "authorship_tag": "ABX9TyPbNq4dYFsLYwlLgLA93pE4",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -48,7 +48,7 @@
         "id": "Dkyqha3flyo8",
         "outputId": "b7ec4660-5518-4ac1-d65e-69cfbe3f4463"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -64,11 +64,93 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "# 多文岐するif文\n",
+        "score = int(input(\"試験の点数を入力してください>\"))\n",
+        "if score < 0 or score > 100:\n",
+        "    print(\"異常な得点です\")\n",
+        "    print(\"入力し直してください\")\n",
+        "elif score >= 60:\n",
+        "    print(\"合格！\")\n",
+        "    print(\"よくがんばりましたね\")\n",
+        "else:\n",
+        "    print(\"残念ながら不合格です\")\n",
+        "    print(\"追試を受けてください\")"
+      ],
+      "metadata": {
+        "id": "8xeYWlLepBvk",
+        "outputId": "15d68658-9734-4873-ff05-274b49b1a099",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "試験の点数を入力してください>80\n",
+            "合格！\n",
+            "よくがんばりましたね\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 晩ご飯をレコメンドするチャットボット\n",
+        "print(\"すべての質問に y または n で答えてください\")\n",
+        "okane_aruka = input(\"お金に余裕はありますか\")\n",
+        "if okane_aruka == \"y\":\n",
+        "  onaka_suiteruka = input(\"お腹がすごく空いていますか？\")\n",
+        "  nomitai_kibunka = input(\"ビールを飲みたいですか？\")\n",
+        "  if onaka_suiteruka == \"y\" and nomitai_kibunka == \"y\":\n",
+        "    print(\"焼き肉はいかがですか\")\n",
+        "  elif onaka_suiteruka == \"y\":\n",
+        "    print(\"カレーはいかがですか\")\n",
+        "  elif nomitai_kibunka == \"y\":\n",
+        "    print(\"焼き鳥はいかがですか\")\n",
+        "  else:\n",
+        "    print(\"パスタはいかがですか\")\n",
+        "  yasyoku_iruka = input(\"夜食は必要ですか？\")\n",
+        "  if yasyoku_iruka == \"y\":\n",
+        "    print(\"コンビニのチキンはいかがですか？\")\n",
+        "else:\n",
+        "  print(\"家で食べましょう\")"
+      ],
+      "metadata": {
+        "id": "5bOaoU9UuyLh",
+        "outputId": "083313f2-6b28-417b-aa02-3d4908e33247",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "すべての質問に y または n で答えてください\n",
+            "お金に余裕はありますかy\n",
+            "お腹がすごく空いていますか？n\n",
+            "ビールを飲みたいですか？y\n",
+            "焼き鳥はいかがですか\n",
+            "夜食は必要ですか？y\n",
+            "コンビニのチキンはいかがですか？\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "8xeYWlLepBvk"
+        "id": "ArJlvRIqyi06"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     }
   ]
