Colab を使用して作成されました

--- a/6-3_オブジェクトの落とし穴.ipynb
+++ b/6-3_オブジェクトの落とし穴.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN5f+mOF3qt4B4Rs6++XpEJ",
+      "authorship_tag": "ABX9TyN3XRiR+h44RfqgTDu+7Cd/",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -91,7 +91,7 @@
         "id": "7tqumFh1yS7H",
         "outputId": "82a38f59-5aa5-41a0-b44b-cb0903ca2b15"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -128,7 +128,7 @@
         "id": "YlsZ7mps16mt",
         "outputId": "aa89cce6-d55e-4903-f4b1-f70644945c0a"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -164,7 +164,7 @@
         "id": "m0jEHhvG4wBT",
         "outputId": "1b198604-1b04-410b-9cac-21d306bcd7ca"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -203,7 +203,7 @@
         "id": "Q-qkturI6PZJ",
         "outputId": "3e7b9665-3fae-4c9a-c1e6-e61fa1a7a3ba"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -221,6 +221,58 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        " # 文字列を渡しても悪影響が起きない\n",
+        " def add_suffix(name):\n",
+        "    name = name + \"さん\"\n",
+        "    return name\n",
+        "\n",
+        "before_name = \"松田\"\n",
+        "after_name = add_suffix(before_names)\n",
+        "print(\"さん付け後：\" + after_name)\n",
+        "print(\"さん付け前：\" + before_name)"
+      ],
+      "metadata": {
+        "id": "zdxK1m_6Q_Nr",
+        "outputId": "12388e70-4e6f-4602-f3bc-5d0b3f7ad26f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "さん付け後：松田さん\n",
+            "さん付け前：松田\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# identity値の変化の比較\n",
+        "print(\"identityの変化を比較\")\n",
+        "\n",
+        "names = list() # リストの場合\n",
+        "print(f\"list(変更前)：{id(names)}\")\n",
+        "names.append(\"松田\")\n",
+        "print(f\"list(変更後)：{id(names)}\")\n",
+        "\n",
+        "name = \"松田\"   # 文字列の場合\n",
+        "print()"
+      ],
+      "metadata": {
+        "id": "vIf7HtHjiG0_"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
