Colab を使用して作成されました

--- a/6-3_オブジェクトの落とし穴.ipynb
+++ b/6-3_オブジェクトの落とし穴.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN3XRiR+h44RfqgTDu+7Cd/",
+      "authorship_tag": "ABX9TyMQKXDdxoBWvnBSw23pUaFb",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -242,7 +242,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -266,10 +266,37 @@
         "print(f\"list(変更後)：{id(names)}\")\n",
         "\n",
         "name = \"松田\"   # 文字列の場合\n",
-        "print()"
+        "print(f\"str(変更前)：{id(name)}\")\n",
+        "name = \"スーパー\" + name\n",
+        "print(f\"str(変更後)：{id(name)}\")"
       ],
       "metadata": {
-        "id": "vIf7HtHjiG0_"
+        "id": "vIf7HtHjiG0_",
+        "outputId": "d4fbaf91-bea3-45b5-929d-03fb848a3bc9",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "identityの変化を比較\n",
+            "list(変更前)：132260023169472\n",
+            "list(変更後)：132260023169472\n",
+            "str(変更前)：132260024930656\n",
+            "str(変更後)：132260024928656\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "lshBoSzIQxpo"
       },
       "execution_count": null,
       "outputs": []
