Colab を使用して作成されました

--- a/7-7_練習問題.ipynb
+++ b/7-7_練習問題.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOw3L+1suZxgcoQeSvGT3Wf",
+      "authorship_tag": "ABX9TyPuaFfrSfmDcSR2/E8y4+69",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -81,7 +81,7 @@
         "id": "CNUrtcYhQlTZ",
         "outputId": "023e14bc-c441-40d6-d29f-fbf6029abef1"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -108,7 +108,7 @@
         "id": "cUzIs9lcQ87g",
         "outputId": "0e9a101f-fc75-419d-a87a-3c6ad6b836a7"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -137,7 +137,7 @@
         "id": "Ws5NcNC3RDZy",
         "outputId": "0a6b5b1f-a4ef-4a75-e4c1-d4752237aec4"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -169,7 +169,7 @@
         "id": "XJ9sDKXMSf4q",
         "outputId": "d637b3d6-f73d-4153-e7d1-bcac0745a77d"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -199,7 +199,7 @@
         "id": "QLzQ8boM5Tlj",
         "outputId": "3d5fcf29-4df7-49b5-94e4-41ec51956f43"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "name": "stdout",
@@ -238,7 +238,7 @@
         "id": "dnFt-xNJTw3S",
         "outputId": "93b254ca-cf69-4e60-943a-f42c5411d604"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -278,7 +278,7 @@
         "id": "G89OFQGM7mrZ",
         "outputId": "f4e97550-4416-4026-8f8c-e8cf46274e66"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -313,14 +313,191 @@
         "prediction = []\n",
         "for numbers in range(3):\n",
         "    pre = input(f'{numbers + 1}桁目の予想を入力（0～9）>>')\n",
-        "    prediction.append(pre)\n",
-        ""
+        "    prediction.append(pre)\n"
       ],
       "metadata": {
-        "id": "0EWhRf-s8YHu"
+        "id": "0EWhRf-s8YHu",
+        "outputId": "6be43e80-33e3-4dbe-c8ef-50645f032b22",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 4,
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "数当てゲームを始めます。3桁の数を当ててください！\n",
+            "1桁目の予想を入力（0～9）>>1\n",
+            "2桁目の予想を入力（0～9）>>2\n",
+            "3桁目の予想を入力（0～9）>>3\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 練習7-6\n",
+        "from random import randint\n",
+        "print('数当てゲームを始めます。3桁の数を当ててください！')\n",
+        "\n",
+        "answer = []\n",
+        "for num in range(3):\n",
+        "    answer.append(randint(0,9))\n",
+        "\n",
+        "conti = 1\n",
+        "while conti == 1:\n",
+        "    prediction = []\n",
+        "    for numbers in range(3):\n",
+        "        pre = input(f'{numbers + 1}桁目の予想を入力（0～9）>>')\n",
+        "        prediction.append(pre)\n",
+        "\n",
+        "    hit = 0\n",
+        "    for n in range(3):\n",
+        "        if prediction[n] == answer[n]:\n",
+        "            hit += 1\n",
+        "\n",
+        "    ball = 0\n",
+        "    if prediction[0] == answer[1]:\n",
+        "        ball += 1\n",
+        "    elif prediction[0] == answer[2]:\n",
+        "        ball += 1\n",
+        "\n",
+        "    if prediction[1] == answer[0]:\n",
+        "        ball += 1\n",
+        "    elif prediction[1] == answer[2]:\n",
+        "        ball += 1\n",
+        "\n",
+        "    if prediction[2] == answer[0]:\n",
+        "        ball += 1\n",
+        "    elif prediction[2] == answer[1]:\n",
+        "        ball += 1\n",
+        "\n",
+        "    if hit == 3:\n",
+        "        print('正解です！')\n",
+        "    else:\n",
+        "        print(f'{hit}ヒット！{ball}ボール！')\n",
+        "        conti = int(input('続けますか？　1：続ける　2：終了>>'))\n",
+        "\n",
+        "if conti == 2:\n",
+        "    print('正解を表示します')\n",
+        "    print(answer)\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "idbRH7lG-vvW",
+        "outputId": "5c33208b-2996-4862-e2cc-128a1eb74b33",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "数当てゲームを始めます。3桁の数を当ててください！\n",
+            "1桁目の予想を入力（0～9）>>1\n",
+            "2桁目の予想を入力（0～9）>>2\n",
+            "3桁目の予想を入力（0～9）>>3\n",
+            "0ヒット！0ボール！\n",
+            "続けますか？　1：続ける　2：終了>>1\n",
+            "1桁目の予想を入力（0～9）>>5\n",
+            "2桁目の予想を入力（0～9）>>6\n",
+            "3桁目の予想を入力（0～9）>>2\n",
+            "0ヒット！0ボール！\n",
+            "続けますか？　1：続ける　2：終了>>2\n",
+            "正解を表示します\n",
+            "[7, 7, 0]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 練習7-6\n",
+        "from random import randint\n",
+        "print('数当てゲームを始めます。3桁の数を当ててください！')\n",
+        "\n",
+        "answer = []\n",
+        "for num in range(3):\n",
+        "    answer.append(randint(0,9))\n",
+        "print(answer)   #プログラム修正のため一時的に実装\n",
+        "\n",
+        "conti = 1\n",
+        "while conti == 1:\n",
+        "    prediction = []\n",
+        "    for numbers in range(3):\n",
+        "        pre = input(f'{numbers + 1}桁目の予想を入力（0～9）>>')\n",
+        "        prediction.append(pre)\n",
+        "        print(prediction)\n",
+        "\n",
+        "    hit = 0\n",
+        "    for n in range(3):\n",
+        "        if prediction[n] == answer[n]:\n",
+        "            hit =+ 1\n",
+        "            print(prediction[n])\n",
+        "\n",
+        "    ball = 0\n",
+        "    if prediction[0] == answer[1]:\n",
+        "        ball =+ 1\n",
+        "    elif prediction[0] == answer[2]:\n",
+        "        ball =+ 1\n",
+        "\n",
+        "    if prediction[1] == answer[0]:\n",
+        "        ball =+ 1\n",
+        "    elif prediction[1] == answer[2]:\n",
+        "        ball =+ 1\n",
+        "\n",
+        "    if prediction[2] == answer[0]:\n",
+        "        ball =+ 1\n",
+        "    elif prediction[2] == answer[1]:\n",
+        "        ball =+ 1\n",
+        "\n",
+        "\n",
+        "    if hit == 3:\n",
+        "        print('正解です！')\n",
+        "    else:\n",
+        "        print(f'{hit}ヒット！{ball}ボール！')\n",
+        "        conti = int(input('続けますか？　1：続ける　2：終了>>'))\n",
+        "\n",
+        "if conti == 2:\n",
+        "    print('正解を表示します')\n",
+        "    print(answer)"
+      ],
+      "metadata": {
+        "id": "3XFbPjxvG_L7",
+        "outputId": "23bfc500-1a6d-446f-dd53-d68ef5624200",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "数当てゲームを始めます。3桁の数を当ててください！\n",
+            "[8, 8, 8]\n",
+            "1桁目の予想を入力（0～9）>>8\n",
+            "['8']\n",
+            "2桁目の予想を入力（0～9）>>8\n",
+            "['8', '8']\n",
+            "3桁目の予想を入力（0～9）>>8\n",
+            "['8', '8', '8']\n",
+            "0ヒット！0ボール！\n",
+            "続けますか？　1：続ける　2：終了>>2\n",
+            "正解を表示します\n",
+            "[8, 8, 8]\n"
+          ]
+        }
+      ]
     }
   ]
 }
