Colab を使用して作成されました

--- a/7-7_練習問題.ipynb
+++ b/7-7_練習問題.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPuaFfrSfmDcSR2/E8y4+69",
+      "authorship_tag": "ABX9TyPM04t/NAR3J4Q2uj/3D9Q2",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -46,7 +46,7 @@
         }
       ],
       "source": [
-        "# 練習7-4\n",
+        "    # 練習7-4\n",
         "# 次の機能を持つプログラムを、組み込み関数を使ってそれぞれ作成しなさい。ただし、いずれも必ず指定の数値が入力されていることを前提とします。\n",
         "# (1)入力された3つの整数の内、大きい値を表示する\n",
         "numbers = [12,5,2,3,26]\n",
@@ -322,7 +322,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "name": "stdout",
@@ -394,7 +394,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -477,7 +477,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -495,6 +495,296 @@
             "続けますか？　1：続ける　2：終了>>2\n",
             "正解を表示します\n",
             "[8, 8, 8]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 練習7-6\n",
+        "from random import randint\n",
+        "print('数当てゲームを始めます。3桁の数を当ててください！')\n",
+        "\n",
+        "answer = []\n",
+        "for num in range(3):\n",
+        "    answer.append(randint(0,9))\n",
+        "print(answer)   #プログラム修正のため一時的に実装\n",
+        "\n",
+        "conti = 1\n",
+        "while conti == 1:\n",
+        "    prediction = []\n",
+        "    for numbers in range(3):\n",
+        "        pre = int(input(f'{numbers + 1}桁目の予想を入力（0～9）>>')) #数値でリストに入れるように工夫\n",
+        "        prediction.append(pre)\n",
+        "        print(prediction)\n",
+        "\n",
+        "    hit = 0\n",
+        "    for n in range(3):\n",
+        "        if prediction[n] == answer[n]:\n",
+        "            hit = hit + 1\n",
+        "            print(prediction[n])\n",
+        "\n",
+        "    ball = 0\n",
+        "    if prediction[0] == answer[1]:\n",
+        "        ball =+ 1\n",
+        "    elif prediction[0] == answer[2]:\n",
+        "        ball =+ 1\n",
+        "\n",
+        "    if prediction[1] == answer[0]:\n",
+        "        ball =+ 1\n",
+        "    elif prediction[1] == answer[2]:\n",
+        "        ball =+ 1\n",
+        "\n",
+        "    if prediction[2] == answer[0]:\n",
+        "        ball =+ 1\n",
+        "    elif prediction[2] == answer[1]:\n",
+        "        ball =+ 1\n",
+        "\n",
+        "\n",
+        "    if hit == 3:\n",
+        "        print('正解です！') #この書き方だと正解したとしても、問答無用でもう一度予想から。間違えない限りループする。。。\n",
+        "    else:\n",
+        "        print(f'{hit}ヒット！{ball}ボール！')\n",
+        "        conti = int(input('続けますか？　1：続ける　2：終了>>'))\n",
+        "\n",
+        "if conti == 2:\n",
+        "    print('正解を表示します')\n",
+        "    print(answer)"
+      ],
+      "metadata": {
+        "id": "Gqx3JjBjUL-w",
+        "outputId": "9e42aa20-3eb4-44ce-8fc4-93a7d7ebfc7c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "数当てゲームを始めます。3桁の数を当ててください！\n",
+            "[3, 0, 2]\n",
+            "1桁目の予想を入力（0～9）>>3\n",
+            "[3]\n",
+            "2桁目の予想を入力（0～9）>>0\n",
+            "[3, 0]\n",
+            "3桁目の予想を入力（0～9）>>2\n",
+            "[3, 0, 2]\n",
+            "3\n",
+            "0\n",
+            "2\n",
+            "正解です！\n",
+            "1桁目の予想を入力（0～9）>>2\n",
+            "[2]\n",
+            "2桁目の予想を入力（0～9）>>0\n",
+            "[2, 0]\n",
+            "3桁目の予想を入力（0～9）>>2\n",
+            "[2, 0, 2]\n",
+            "0\n",
+            "2\n",
+            "2ヒット！1ボール！\n",
+            "続けますか？　1：続ける　2：終了>>2\n",
+            "正解を表示します\n",
+            "[3, 0, 2]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 練習7-6\n",
+        "from random import randint\n",
+        "print('数当てゲームを始めます。3桁の数を当ててください！')\n",
+        "\n",
+        "answer = []\n",
+        "for num in range(3):\n",
+        "    answer.append(randint(0,9))\n",
+        "print(answer)   #プログラム修正のため一時的に実装\n",
+        "\n",
+        "conti = 1\n",
+        "while conti == 1:\n",
+        "    prediction = []\n",
+        "    for numbers in range(3):\n",
+        "        pre = int(input(f'{numbers + 1}桁目の予想を入力（0～9）>>')) #数値でリストに入れるように工夫\n",
+        "        prediction.append(pre)\n",
+        "        print(prediction)\n",
+        "\n",
+        "    hit = 0\n",
+        "    for n in range(3):\n",
+        "        if prediction[n] == answer[n]:\n",
+        "            hit = hit + 1\n",
+        "            print(prediction[n])\n",
+        "\n",
+        "    ball = 0\n",
+        "    if prediction[0] == answer[1]:\n",
+        "        ball =+ 1\n",
+        "    elif prediction[0] == answer[2]:\n",
+        "        ball =+ 1\n",
+        "\n",
+        "    if prediction[1] == answer[0]:\n",
+        "        ball =+ 1\n",
+        "    elif prediction[1] == answer[2]:\n",
+        "        ball =+ 1\n",
+        "\n",
+        "    if prediction[2] == answer[0]:\n",
+        "        ball =+ 1\n",
+        "    elif prediction[2] == answer[1]:\n",
+        "        ball =+ 1\n",
+        "\n",
+        "\n",
+        "    if hit == 3:\n",
+        "        print('正解です！') #\n",
+        "        break\n",
+        "    else:\n",
+        "        print(f'{hit}ヒット！{ball}ボール！')\n",
+        "        conti = int(input('続けますか？　1：続ける　2：終了>>'))\n",
+        "\n",
+        "if conti == 2:\n",
+        "    print('正解を表示します')\n",
+        "    print(answer)"
+      ],
+      "metadata": {
+        "id": "A3LXZE9iUawD",
+        "outputId": "5fe54176-0635-4599-fba3-a4416fc1b23e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "数当てゲームを始めます。3桁の数を当ててください！\n",
+            "[4, 9, 4]\n",
+            "1桁目の予想を入力（0～9）>>4\n",
+            "[4]\n",
+            "2桁目の予想を入力（0～9）>>9\n",
+            "[4, 9]\n",
+            "3桁目の予想を入力（0～9）>>4\n",
+            "[4, 9, 4]\n",
+            "4\n",
+            "9\n",
+            "4\n",
+            "正解です！\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 練習7-6 完成形！\n",
+        "from random import randint\n",
+        "print('数当てゲームを始めます。3桁の数を当ててください！')\n",
+        "\n",
+        "answer = []\n",
+        "for num in range(3):\n",
+        "    answer.append(randint(0,9))\n",
+        "\n",
+        "conti = 1\n",
+        "while conti == 1:\n",
+        "    prediction = []\n",
+        "    for numbers in range(3):\n",
+        "        pre = int(input(f'{numbers + 1}桁目の予想を入力（0～9）>>'))\n",
+        "        prediction.append(pre)\n",
+        "        print(f'>>{prediction}')\n",
+        "\n",
+        "    hit = 0\n",
+        "    for n in range(3):\n",
+        "        if prediction[n] == answer[n]:\n",
+        "            hit = hit + 1\n",
+        "\n",
+        "    ball = 0\n",
+        "    if prediction[0] == answer[1]:\n",
+        "        ball = ball + 1\n",
+        "    elif prediction[0] == answer[2]:\n",
+        "        ball = ball + 1\n",
+        "\n",
+        "    if prediction[1] == answer[0]:\n",
+        "        ball = ball + 1\n",
+        "    elif prediction[1] == answer[2]:\n",
+        "        ball = ball + 1\n",
+        "\n",
+        "    if prediction[2] == answer[0]:\n",
+        "        ball = ball + 1\n",
+        "    elif prediction[2] == answer[1]:\n",
+        "        ball = ball + 1\n",
+        "\n",
+        "\n",
+        "    if hit == 3:\n",
+        "        print()\n",
+        "        print(f'正解です！（正解は{answer}）')\n",
+        "        break\n",
+        "    else:\n",
+        "        print()\n",
+        "        print(f'{hit}ヒット！{ball}ボール！')\n",
+        "        conti = int(input('続けますか？　1：続ける　2：終了>>'))\n",
+        "        print()\n",
+        "\n",
+        "if conti == 2:\n",
+        "    print()\n",
+        "    print('正解を表示します')\n",
+        "    print(answer)"
+      ],
+      "metadata": {
+        "id": "Eb6S7eXVXEmj",
+        "outputId": "1aff7006-ea40-4537-f6c4-b98255f61d4e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "数当てゲームを始めます。3桁の数を当ててください！\n",
+            "[8, 7, 5]\n",
+            "1桁目の予想を入力（0～9）>>6\n",
+            ">>[6]\n",
+            "2桁目の予想を入力（0～9）>>4\n",
+            ">>[6, 4]\n",
+            "3桁目の予想を入力（0～9）>>2\n",
+            ">>[6, 4, 2]\n",
+            "\n",
+            "0ヒット！0ボール！\n",
+            "続けますか？　1：続ける　2：終了>>1\n",
+            "\n",
+            "1桁目の予想を入力（0～9）>>5\n",
+            ">>[5]\n",
+            "2桁目の予想を入力（0～9）>>6\n",
+            ">>[5, 6]\n",
+            "3桁目の予想を入力（0～9）>>4\n",
+            ">>[5, 6, 4]\n",
+            "\n",
+            "0ヒット！1ボール！\n",
+            "続けますか？　1：続ける　2：終了>>1\n",
+            "\n",
+            "1桁目の予想を入力（0～9）>>8\n",
+            ">>[8]\n",
+            "2桁目の予想を入力（0～9）>>7\n",
+            ">>[8, 7]\n",
+            "3桁目の予想を入力（0～9）>>9\n",
+            ">>[8, 7, 9]\n",
+            "\n",
+            "2ヒット！0ボール！\n",
+            "続けますか？　1：続ける　2：終了>>1\n",
+            "\n",
+            "1桁目の予想を入力（0～9）>>8\n",
+            ">>[8]\n",
+            "2桁目の予想を入力（0～9）>>7\n",
+            ">>[8, 7]\n",
+            "3桁目の予想を入力（0～9）>>5\n",
+            ">>[8, 7, 5]\n",
+            "\n",
+            "正解です！（正解は[8, 7, 5]）\n"
           ]
         }
       ]
